# NLvib-py

./: .gitignore  .gitignore.summary.md  CITATION.cff  CLEANUP_SUMMARY.md  FINAL_REORGANIZATION_SUMMARY.md  LICENSE  PROJECT_GOALS.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  TASKS.md  TESTING_SUMMARY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  validate.yml
EXAMPLES/11_Timoshenko/: Timoshenko.m  Timoshenko.mat
EXAMPLES/12_condensationToLocalNonlinearity/: beam_cubicSpring_nlred.m
SRC/: solve_and_continue.m
SRC/MechanicalSystems/: CMS_ROM.m
agents/: AGENTS.md  PM.md  TASKS.md
agents/tools/: openai_validator.py
demo/: 00_quickstart.ipynb  01_nonlinear_elements.ipynb  04_shooting.ipynb  07_parameter_study.ipynb  README.md
docs/: RELEASE_AUDIT.md  comparison_report.md  contributing.md  differences-from-matlab.md  examples.md  getting-started.md  index.md  validation.md
docs/api/: cms.md  continuation.md  io.md  nonlinearities.md  solvers.md  systems.md  utils.md  visualization.md
docs/examples/: index.md
examples/01_duffing/: run.py
examples/02_two_dof_cubic/: run.py
matlab_src/: README.md
notebooks/: 01_duffing.ipynb  02_two_dof_cubic.ipynb  03_two_dof_unilateral.ipynb  04_two_dof_tanh_friction.ipynb  05_geometric_nonlinearity.ipynb  06_multi_dof_multi_nl.ipynb  07_beam_tanh_friction.ipynb  08_beam_cubic_spring_nma.ipynb
src/nlvib/: __init__.py
tools/: bump_version.py  fetch_matlab_source.sh  generate_comparison_report.py  generate_fixtures.m  generate_fixtures.py
(+93 files in other folders)
